crates/cli/tests/snapshots/run_legacy_test__run_legacy__dependencies__can_run_deps_in_serial.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ depsB:standard (no op)
▮▮▮▮ depsC:standard (no op)
▮▮▮▮ depsA:standard (no op)
▮▮▮▮ dependsOn:serialDeps (no op)

Tasks: 4 completed
 Time: 100ms
