crates/cli/tests/snapshots/run_legacy_test__run_legacy__dependencies__changes_primary_hash_if_deps_hash_changes.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: "[h1, h2, extract_hash_from_run(sandbox.path(), \"outputs:asDep\"),\nextract_hash_from_run(sandbox.path(), \"outputs:withDeps\")]"
---
[
    "f50d7462545a16a7557ff02ea688b1e9c3cffc81e46993d311f2fa21d7ef0abf",
    "6d7a4aeaa8c62c415c515e93daa446bb4360cfa9677a2be4a7010f0ebc6dc557",
    "803ea25ead7b34e3043d47ec89fdfd52b17b7597b3e6056a60168e3a917d177a",
    "96965e1ec21ae027ef00feeed7b6e7f9a2de94386566f162eb6e656a2ed2c02d",
]
