crates/cli/tests/snapshots/run_legacy_test__run_legacy__dependencies__generates_unique_hashes_for_each_target.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: "[extract_hash_from_run(sandbox.path(), \"outputs:asDep\"),\nextract_hash_from_run(sandbox.path(), \"outputs:withDeps\")]"
---
[
    "f50d7462545a16a7557ff02ea688b1e9c3cffc81e46993d311f2fa21d7ef0abf",
    "6d7a4aeaa8c62c415c515e93daa446bb4360cfa9677a2be4a7010f0ebc6dc557",
]
