crates/cli/tests/snapshots/run_legacy_test__run_legacy__dependencies__runs_the_graph_in_order_not_from_head.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ depsC:dependencyOrder (no op)
▮▮▮▮ depsB:dependencyOrder (no op)

Tasks: 2 completed
 Time: 100ms
